prevent vertical overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,7 +30,7 @@ body, html {
 .gallery-container {
 	//width: 80%;
 	margin: 0 auto;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .gallery {
